[package]
name = "scanio"
version = "0.1.0"
authors = ["undersquire"]
edition = "2021"
description = "Simple console input macros with the goal of being implemented in the standard library."
homepage = "https://github.com/undersquire/scanio"
repository = "https://github.com/undersquire/scanio"
readme = "README.md"
keywords = ["io", "read", "scan", "input", "macro", "simple"]

[lib]
name = "scanio"